@@ -70,6 +70,8 @@ extern void new_mp3_window(char *filename, char *album, char *artist,
 extern void new_aac_window_get_meta(char *filename);
 extern int is_raw_audio_type(char *extension);
 extern void new_playback_window(char *filename);
+extern int is_tzx_audio_type(char *extension);
+extern void new_tzx_playback_window(char *filename);
 #endif /* __linux__ */
 extern int is_text_type(char * extension);
 extern int is_ascii_file(char *filename);
@@ -256,6 +258,9 @@ static void handle_type_other(char *filename)
 	}
 	else if (is_aac_type(ext)) {
 		new_aac_window_get_meta(filename);
+	}
+	else if (is_tzx_audio_type(ext)) {
+		new_tzx_playback_window(filename);
 	}
 	else if (is_raw_audio_type(ext)) {
 		new_playback_window(filename);
